# Procedural-Content-Generation-for-Real-Time-3D

./: NdiayeMauge.tgz  Rapport du projet de synthèse d.docx
NdiayeMauge/: lray
NdiayeMauge/include/: cylinder.h  light.h  plane.h
NdiayeMauge/lib/: README  install.sh  wherismygl.sh
NdiayeMauge/src/: lray.cpp
NdiayeMauge/text/: _figure.txt
Niveau3D/code.2d/: Makefile
Niveau3D/code.3d/: Makefile  demo_scene3D  g3x_example
PndiayeKmauge/: lray
PndiayeKmauge/include/: color.h  fonctionsAnnexe.h  ray.h  rectangle.h  source.h  sphere.h  triangle.h
PndiayeKmauge/src/: g3x_example.c  lray.cpp
code.2d/: Makefile  g2x_example
code.3d/: Makefile  Makefile~  main
mainfolder/: .cproject  .project  CMakeLists.txt  Makefile  Makefile~  lray  lray.cpp  main  main.cpp
mainfolder/include/: Noeud.h  _cylinder.h  camera.h  color.h  cylinder.h  light.h  object.h  parser.h  plane.h  ray.h  rectangle.h  sphere.h  triangle.h  vect.h
mainfolder/lib/code.3d/: Makefile  lray
mainfolder/lib/code.3d/include/: Noeud.h  color.h  cylinder.h  file.h  sphere.h  triangle.h  vect.h
mainfolder/lib/code.3d/src/: lray.cpp  main.cpp
mainfolder/lib/code.3d/text/: figure.txt
mainfolder/lib/libg3x/include/: g3x_basix.h  g3x_macros.h  g3x_quaternions.h
mainfolder/lib/python/: mainMP2.py
mainfolder/raytracer-master/: .gitignore  Camera.h  Color.h  Light.h  Makefile  Object.h  Plane.h  README.md  Ray.h  Source.h  Sphere.h  Vect.h  main.cpp  main.cpp~  main_aliased.h  triangle.h
mainfolder/text/: figure.txt
python/: Balistique.Simul.py
stuff needed and backup/: LISEZMOI
(+125 files in other folders)
